<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (C) 2014-2017 The Holodeck B2B Team, Sander Fieten

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>org.holodeckb2b</groupId>
	<artifactId>holodeckb2b</artifactId>
	<packaging>pom</packaging>
	<version>8.1.0</version>
	<name>Holodeck B2B</name>
	<url>http://www.holodeck-b2b.org/</url>
	<inceptionYear>2015</inceptionYear>
	<description>
		An open source B2B messaging solution that implements the OASIS
		specifications for ebXML Messaging version 3 and AS4 profile.
		It is designed with extensibility in mind providing an interface layer
		(API) which you can find in the Interfaces module and lots of
		documentation inside the code.
	</description>

	<scm>
		<url>https://github.com/holodeck-b2b/Holodeck-B2B</url>
		<connection>scm:git:https://github.com/holodeck-b2b/Holodeck-B2B.git</connection>
		<developerConnection>
			scm:git:git@github.com:holodeck-b2b/Holodeck-B2B.git</developerConnection>
	</scm>
	<issueManagement>
		<url>https://github.com/holodeck-b2b/Holodeck-B2B/issues</url>
	</issueManagement>

	<organization>
		<name>The Holodeck B2B Team</name>
		<url>http://www.holodeck-b2b.org/team</url>
	</organization>
	<developers>
		<developer>
			<name>Sander Fieten</name>
			<organization>Chasquis</organization>
			<organizationUrl>
				http://chasquis-consulting.com/holodeck-b2b-support/</organizationUrl>
			<email>sander at chasquis-consulting.com</email>
			<roles>
				<role>Architect</role>
				<role>Lead developer</role>
			</roles>
			<timezone>Europe/Amsterdam</timezone>
		</developer>
		<developer>
			<name>Renate Slebe</name>
			<organization>Chasquis</organization>
			<organizationUrl>
				http://chasquis-consulting.com/holodeck-b2b-support/</organizationUrl>
			<email>renate at chasquis-consulting.com</email>
			<roles>
				<role>Product manager</role>
				<role>QA and documentation</role>
			</roles>
			<timezone>Europe/Amsterdam</timezone>
		</developer>
	</developers>
	<contributors>
		<contributor>
			<name>Philip Helger</name>
			<email>philip at helger.com</email>
		</contributor>
		<contributor>
			<name>Timur Shakuov</name>
			<email>t.shakuov at gmail.com</email>
		</contributor>
	</contributors>

	<properties>
		<!-- This version of Holodeck B2B requires JDK 17 (for Jakarta EE and WSS4J 4.0) -->
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>

		<hb2b-utils-version>2.0.0</hb2b-utils-version>
		<axis2-version>1.8.2</axis2-version>
		<axiom-version>1.4.0</axiom-version>
		<netbeans.hint.license>gpl30</netbeans.hint.license>
		<log4j.version>2.23.1</log4j.version>
	</properties>

	<modules>
		<module>modules/holodeckb2b-interfaces</module>
		<module>modules/holodeckb2b-core</module>
		<module>modules/holodeckb2b-ebms3as4</module>
		<module>modules/holodeckb2b-certmanager</module>
		<module>modules/holodeckb2b-as4secprovider</module>
		<module>modules/holodeckb2b-default-mds</module>
		<module>modules/holodeckb2b-default-psp</module>
		<module>modules/holodeckb2b-ui</module>
		<module>modules/holodeckb2b-distribution</module>
		<module>modules/holodeckb2b-it</module>
	</modules>

	<licenses>
		<license>
			<name>GNU General Public License v3</name>
			<url>http://www.gnu.org/licenses/gpl-3.0.html</url>
		</license>
	</licenses>

	<dependencyManagement>
		<dependencies>

			<!--===============================================================
                First the modules of Holodeck B2B itself
            =============================================================== -->
			<dependency>
				<groupId>org.holodeckb2b</groupId>
				<artifactId>holodeckb2b-interfaces</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.holodeckb2b</groupId>
				<artifactId>holodeckb2b-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>holodeckb2b-certmanager</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.holodeckb2b</groupId>
				<artifactId>holodeckb2b-metadatastorage</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.holodeckb2b</groupId>
				<artifactId>holodeckb2b-payloadstorage</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.holodeckb2b</groupId>
				<artifactId>holodeckb2b-ebms3as4</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.holodeckb2b</groupId>
				<artifactId>holodeckb2b-ui</artifactId>
				<version>${project.version}</version>
			</dependency>
			<!-- Generic utility classes  -->
			<dependency>
				<groupId>org.holodeckb2b.commons</groupId>
				<artifactId>generic-utils</artifactId>
				<version>${hb2b-utils-version}</version>
			</dependency>

			<!--===============================================================
                Holodeck B2B is built on Axis2, so include all relevant Axis2
                modules
            =============================================================== -->
			<dependency>
				<groupId>org.apache.axis2</groupId>
				<artifactId>axis2-kernel</artifactId>
				<version>${axis2-version}</version>
				<exclusions>
					<exclusion>
				    	<groupId>commons-io</groupId>
				    	<artifactId>commons-io</artifactId>					
					</exclusion>
				</exclusions>				
			</dependency>
			<dependency>
				<groupId>org.apache.axis2</groupId>
				<artifactId>axis2-saaj</artifactId>
				<version>${axis2-version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.axis2</groupId>
				<artifactId>axis2-transport-http</artifactId>
				<version>${axis2-version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.ws.commons.axiom</groupId>
				<artifactId>axiom-api</artifactId>
				<version>${axiom-version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.ws.commons.axiom</groupId>
				<artifactId>axiom-impl</artifactId>
				<version>${axiom-version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.ws.commons.axiom</groupId>
				<artifactId>axiom-dom</artifactId>
				<version>${axiom-version}</version>
			</dependency>

			<!--===============================================================
                XML Processing libraries
            =============================================================== -->
			<dependency>
				<groupId>org.simpleframework</groupId>
				<artifactId>simple-xml</artifactId>
				<version>2.7.1</version>
				<exclusions>
					<exclusion>
						<groupId>stax</groupId>
						<artifactId>stax-api</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<!-- Jakarta XML Binding (JAXB) for JDK 17+ -->
			<dependency>
				<groupId>jakarta.xml.bind</groupId>
				<artifactId>jakarta.xml.bind-api</artifactId>
				<version>4.0.2</version>
			</dependency>
			<dependency>
				<groupId>org.glassfish.jaxb</groupId>
				<artifactId>jaxb-runtime</artifactId>
				<version>4.0.5</version>
				<scope>runtime</scope>
			</dependency>

			<!--===============================================================
                Log4j is used for logging in Holodeck B2B
            =============================================================== -->
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-api</artifactId>
				<version>${log4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-core</artifactId>
	            <scope>runtime</scope>
				<version>${log4j.version}</version>
			</dependency>
			
			<!--===============================================================
                Test dependencies
            =============================================================== -->
		    <dependency>
		        <groupId>org.junit.jupiter</groupId>
		        <artifactId>junit-jupiter</artifactId>
		        <version>5.9.3</version>
		        <scope>test</scope>
		    </dependency>
		    <dependency>
		        <groupId>org.junit.vintage</groupId>
		        <artifactId>junit-vintage-engine</artifactId>
		        <version>5.7.2</version>
		        <scope>test</scope>
		    </dependency>
		    <dependency>
		        <groupId>junit</groupId>
		        <artifactId>junit</artifactId>
		        <version>4.13.2</version>
		        <scope>test</scope>
		    </dependency>
	        <dependency>
	            <groupId>com.sun.activation</groupId>
	            <artifactId>javax.activation</artifactId>
	            <version>1.2.0</version>
	        </dependency>		    
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-junit-jupiter</artifactId>
				<version>5.14.2</version>
				<scope>test</scope>
			</dependency>		    
	        <dependency>
	            <groupId>${project.groupId}</groupId>
	            <artifactId>holodeckb2b-core</artifactId>
	            <version>${project.version}</version>
	            <type>test-jar</type>
	            <scope>test</scope>
	        </dependency>
			<dependency>
				<groupId>org.holodeckb2b.commons</groupId>
				<artifactId>generic-utils</artifactId>
				<version>${hb2b-utils-version}</version>
				<type>test-jar</type>
				<scope>test</scope>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.2</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>parse-version</id>
						<goals>
							<goal>parse-version</goal>
						</goals>
						<configuration>
							<propertyPrefix>hb2b</propertyPrefix>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
